BTWCT-586 Fix for breadcrumb alignment

--- a/waters-aem-frontend/src/styles/breadcrumb.scss
+++ b/waters-aem-frontend/src/styles/breadcrumb.scss
@@ -4,7 +4,8 @@
         padding-left: 0;
         list-style: none;
         position: relative;
-        margin-bottom: 0;
+        margin-bottom: $space-xl;
+        margin-top: $space-s;
     }
 
     &__item {
